# minimal-diffsl

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
docs/: conf.py  index.rst  requirements.txt
src/: lib.rs
